<resources>
    <string name="app_name">SkinDex</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="name_hint">Name</string>
    <string name="login_button">Log in</string>
    <string name="register_button">Register</string>
    <string name="register_link">Don\'t have account? Register</string>
    <string name="login_link">Already have account? Log in</string>
    <string name="patient_name">Patient Name</string>
    <string name="patient_example_com">patient@example.com</string>
    <string name="add_photo">Add Photo</string>
    <string name="more">More</string>
    <string name="classify">Classify</string>
    <string name="log_out">Log Out</string>
    <string name="add_patient">Add Patient</string>
    <string name="approve">Approve</string>
    <string name="cancel">Cancel</string>
    <string name="crop">Crop</string>
    <string name="upload_image">Upload Image</string>
    <string name="selected_or_cropped_image">Selected or cropped image</string>
    <string name="reject">Reject</string>
    <string name="selected_image">Selected image</string>
    <string name="camera_denied">camera was denied</string>
    <string name="take_photo">Take Photo\n</string>
    <string name="choose_gallery">Choose in gallery</string>
    <string name="select_source">Select Source</string>
    <string name="crop_failed">Crop failed</string>
    <string name="upload_failed">Upload failed</string>
    <string name="diagnosis_placeholder">Diagnos pending...</string>
    <string name="diagnosis_saved">Diagnosis was saved\n</string>
    <string name="image_rejected">Image was rejected</string>
    <string name="update_failed">Failed to update</string>
    <string name="diagnosis_failed">Failed to save diagnosis\n</string>
    <string name="select_patient">Select Patient</string>
    <string name="no_patients">There are no Patients</string>
    <string name="no_assigned_patients">There are no assigning patients\n</string>
    <string name="go_to_profile">Go to profile</string>
    <string name="load_patients_failed">Failed to load patients\n</string>
    <string name="classify_for">Classify for</string>
    <string name="error_loading_patients">Failed to load patients\n</string>
    <string name="placeholder">—</string>
    <string name="probability_format">Probability: %.2f%%</string>
    <string name="diagnosis_image">Diagnosis Image</string>
</resources>